Fix for TEAM-303 (on ff3.5 only parts of avatar are visible)

--- a/chrome/oneteam/skin/default/avatar/avatar.css
+++ b/chrome/oneteam/skin/default/avatar/avatar.css
@@ -1,7 +1,7 @@
 .container {
   background-repeat: no-repeat;
   background-position: center center;
-  -moz-background-size: auto 100%;
+  /*-moz-background-size: auto 100%;*/
   -moz-background-clip: padding;
 }
 
